[package]
name = "bump2version"
version = "0.1.5"
edition = "2021"
description = "⬆️ Easily manage version numbers in your projects."
license = "MIT"
keywords = ["cli", "parser"]
categories = ["command-line-utilities"]
repository = "https://github.com/wiseaidev/bump2version"
documentation = "https://docs.rs/bump2version"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
regex = "1.11.1"
gix = { version = "0.71.0", default-features = false, features = ["status", "worktree-mutation", "revision", "attributes", "index"] }
anyhow = "1.0.97"
smallvec = "1.15.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"
